--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_remote_config: ^0.11.0
   flutter:
     sdk: flutter
+  flutter_rating_stars: ^1.0.3+4
   flutter_signin_button: ^2.0.0
   get:
     git: https://github.com/jonataslaw/getx.git
