--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     git: https://github.com/jonataslaw/getx.git
   google_sign_in: ^5.1.1
   intl: ^0.17.0
+  transparent_image: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
